--- a/requirements.pip.dev.txt
+++ b/requirements.pip.dev.txt
@@ -6,6 +6,7 @@ flake8 >= 3.9.2
 furo >= 2021.7.28b40
 hat-doit >= 0.6.3
 pdoc3 >= 0.9.2
+peru >= 1.3.0
 pytest >= 6.2.4
 pytest-asyncio >= 0.15.1
 pytest-cov >= 2.12.1
